Fix resolution problem on mobile

--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -38,9 +38,12 @@
                     'rgba(75, 192, 192, 0.6)'
                 ]
             }]
+        },
+        options: {
+            responsive: true,
+            maintainAspectRatio: false
         }
     });
-    document.getElementById("myBarChart").height = 20;
 
 </script>
 
