--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -110,7 +110,7 @@
                 <input type="hidden" name="email" th:value="${user.mail}" />
                 <button class="toDevelope" style="height: 100%; width: 100%; background-color: green;'"><b>Invia Messaggio</b></button>
             </td>
-            <td th:text="${#dates.format(user.getRegisterDate(), 'dd MMM yyyy HH:mm')}"></td>
+            <td th:text="${#dates.format(user.getRegisterDate(), 'dd MMM yyyy')}"></td>
             <td th:text="${user.importTotal}"></td>
         </tr>
     </th:block>
@@ -130,9 +130,9 @@
             <tr>
                 <td th:text="${paymentsLog.getPagante()}"></td>
                 <td th:text="${paymentsLog.getQuantity()}"></td>
-                <td th:text="${#dates.format(paymentsLog.getPaymentDate(), 'dd MMM yyyy HH:mm')}"></td>
-                <td th:text="${#dates.format(paymentsLog.getStartServicePeriod(), 'dd MMM yyyy HH:mm')}"></td>
-                <td th:text="${#dates.format(paymentsLog.getEndServicePeriod(), 'dd MMM yyyy HH:mm')}"></td>
+                <td th:text="${#dates.format(paymentsLog.getPaymentDate(), 'dd MMM yyyy')}"></td>
+                <td th:text="${#dates.format(paymentsLog.getStartServicePeriod(), 'dd MMM yyyy')}"></td>
+                <td th:text="${#dates.format(paymentsLog.getEndServicePeriod(), 'dd MMM yyyy')}"></td>
                 <td th:switch="${paymentsLog.getPayed().getDbValue()}" th:style="${paymentsLog.getPayed().getDbValue() == 1 } ? 'background-color: green;' : (${paymentsLog.getPayed().getDbValue() == 0 } ? 'background-color: white;' : 'background-color: orange;')" >
                     <label th:case="2" th:style="'background-color: orange; height: 100%; width: 100%;'">
                         <input type="hidden" name="paymentId" th:value="${paymentsLog.getId()}" />
