--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -2,8 +2,12 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" th:href="@{../../css/styles.css}" />
+    <script type='text/javascript' src="//cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type='text/javascript' src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
     <title>Benvenuto!</title>
 </head>
 <body>
@@ -100,7 +104,15 @@
             <!--td th:text="${user.mail}"></td-->
             <td>
                 <input type="hidden" name="email" th:value="${user.mail}" />
-                <button class="toDevelope" style="height: 100%; width: 100%; background-color: green;'"><b>Invia Messaggio</b></button>
+                <!--button class="toDevelope" style="height: 100%; width: 100%; background-color: green;'"><b>Invia Messaggio</b></button-->
+                <button class="btn btn-large btn-danger" data-html="true" data-toggle="popover"
+                        data-content='<form><input name="message" type="text"/><input name="private_msg" id="private_msg" \
+                         type="button" value="Invia" /></form><script>$("#private_msg").click(function(){alert("Ciao");});</script>'
+                        data-placement="bottom" data-original-title="Messaggio Privato"> Invia messaggio privato</button>
+                <!--div class="input-group">
+                    <input class="form-control" id="appendedInput" type="text" placeholder="Inserisci il tuo messaggio">
+                    <input type="button" class="btn btn-default" value="Invia" id="send_message"></span>
+                </div-->
             </td>
             <td th:text="${#dates.format(user.getRegisterDate(), 'dd MMM yyyy')}"></td>
             <td th:text="${user.importTotal}"></td>
@@ -136,7 +148,7 @@
     </th:block>
 </table>
 
-    <div id="frm" style="display:inline;">
+    <div id="frm" style="display:inline; width: 50%; margin: 0 auto;">
         <div style="display:inline; float: left;">
             <form action="/home/changepage" method="post">
                 <input type="hidden" name="pagenumber" th:value="${pageNumber - 1}" />
@@ -153,6 +165,16 @@
             </form>
         </div>
     </div>
+<script type='text/javascript'>
+
+    $(document).ready(function() {
+
+        $("[data-toggle=popover]").popover();
+
+    });
+
+
+</script>
 </body>
 </html>
 
